cabal-version:      3.0
name:               Popsicle
version:            0.1.0.0
synopsis:           A Lisp.
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             cam
maintainer:         cameronayres123@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Popsicle
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      mtl >= 2.2.2,
                      parsec >= 3.1.16.1
    hs-source-dirs:   app
    default-language: Haskell2010
